--- a/packages.tex
+++ b/packages.tex
@@ -13,6 +13,7 @@
 %\usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage{mathptmx}
+\usepackage{mathtools}
 \usepackage{enumitem}
 \setlist{nolistsep}
 \usepackage{hhline}
