--- a/proxy.tex
+++ b/proxy.tex
@@ -5,6 +5,6 @@
 \includegraphics[width=\maxwidth]{figure/eval:proxy-1} 
 
 \end{knitrout}
-    \caption{Terminating TCP connections causes longer queues to build up at \inbox, and the resulting higher delays erase the gains of scheduling.}
+    \caption{A proxy-based implementation of \name could yield further benefits to the long flows.}
     \label{fig:eval:proxy}
 \end{figure}
