--- a/intro.tex
+++ b/intro.tex
@@ -4,9 +4,10 @@
 %\radhika{Alternate intro: mostly just changed the flow of certain points, removed some that might be better suited in related work, and made some more concrete/specific. /*}
 
 %lots of scheduling algorithms proposed. scheduling used in private wans. seems clearly beneficial.
-The vast literature on scheduling and queue management algorithms~\cite{diffserv, fair-queueing, sfq, pie, CoDel, fifoplus, virtualClocks, csfq, drr, red, ecn} clearly indicates the performance benefits of deploying such schemes within the network. However, the public Internet has proven difficult to evolve accordingly; although router vendors have, over the years, implemented certain schemes (such as fair queueing~\cite{fair-queueing}\radhika{might be better to cite deficit round robin. need to double check}), they are often not enabled by the network operators. 
+The vast literature on scheduling and queue management algorithms~\cite{diffserv, fair-queueing, sfq, pie, CoDel, fifoplus, virtualClocks, csfq, drr, red, ecn} clearly indicates the performance benefits of deploying such schemes within the network. However, the public Internet has proven difficult to evolve accordingly. Although router vendors have, over the years, implemented certain schemes (such as strict priorities, round-robin for fair queueing, and dynamic buffer limiting for active queue management~\cite{cisco-qos}), they are often not enabled (or used effectively) by the network operators. 
+%\radhika{edit, more than not being enabled, they cannot be enforced effectively}
 %Meanwhile, in privately operated wide-area networks, operators have used simple scheduling policies in the core to reap significant gains~\cite{b4, bwe, swan}. 
-This reluctance has stemmed from valid concerns. First, such policies can be difficult to configure, and poor configurations can cause significant performance degradation~\cite{nanog-discussion}. Second, the position of operators in the public Internet is a challenging one, as each of their customers may desire diverging (and often incompatible) features. For example, while enabling fair queueing in the routers would benefit short interactive flows competing with bulk transfers, it may penalize flows bundled within a single VPN tunnel by allocating them smaller than their fair share of bandwidth.
+This is because the position of operators in the public Internet is a challenging one, as each of their customers may desire diverging, and often incompatible, features. For example, while enabling fair queueing in the routers would benefit short interactive flows competing with bulk transfers, it may penalize flows bundled within a single VPN tunnel by allocating them smaller than their fair share of bandwidth. %\radhika{something about not knowing how to apply policies across customers}
 %\radhika{similar issue arises with our bundler too...}.
 Thus, due to limited visibility into their customers' traffic, network operators cannot choose policies that can appease them all. 
 
